--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-    --blue-color: #eff5fa;
-    --gray-color: #E8F7FB;
+    --blue-color: rgb(239, 245, 250);
+    --gray-color: linear-gradient(38deg,rgba(2, 50, 69, 1) 0%, rgba(0, 43, 22, 1) 63%, rgba(138, 137, 109, 1) 100%);
     --dark-blue-color: #023047;
     --black-color: #070917;
     --gray-blue-color: #0821fd;
@@ -17,12 +17,26 @@ body{
     background: var(--blue-color);
 }
 
+header{
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
 nav{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     align-items: center;
     padding: .5em .5em;
+    background-color: var(--blue-color);
+    background-color: rgba(239, 245, 250, 0.234); 
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px); 
+}
+
+.scrolled{
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
 }
 
 .logo{
@@ -51,7 +65,7 @@ nav{
 }
 
 .home-content{
-    padding: 1em 1em;
+    padding: 1.2em 1.2em;
 }
 
 .fst__section{
@@ -61,6 +75,11 @@ nav{
 
 .fst__section h1 span{
     font-weight: 400;
+}
+
+.home__title{
+    font-weight: 700;
+    color: var(--dark-blue-color);
 }
 
 .fst__section a{
@@ -76,8 +95,69 @@ nav{
     margin-bottom: 3em;
 }
 
-.home__title{
-    font-weight: 700;
-    color: var(--dark-blue-color);
+.snd__section{
+    margin-top: 4em;
+    border-radius: 1.5em;
+    background-color: var(--gray-blue-color);
+    color: #fff;
 }
+
+.snd__wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em 1.5em;
+}
+
+.snd__wrapper a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+}
+
+.snd__section img{
+    width: 17em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-btn{
+    padding: 3em .5em;
+    border-radius: .7em;
+    background: linear-gradient(38deg,rgba(2, 50, 69, 1) 0%, rgba(0, 43, 22, 1) 63%, rgba(138, 137, 109, 1) 100%);
+    font-weight: 600;
+
+}
+
+.arrow{
+    font-size: 1.2em;
+}
+
+.name{
+    line-height: .5em;
+}
+
+.home__name{
+    font-weight: 700;
+    font-size: 1.3em;
+}
+
+.home__profession{
+    font-weight: 300;
+    font-size: .9em;
+    margin-bottom: 4em;
+}
+
+.snd__section_icon{
+    font-size: 2em;
+    padding: .2em;
+    background-color: #1c0ee9;
+    border-radius: .2em;
+    margin-right: .4em;
+}
+
+
 
