--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,7 +123,7 @@ nav {
 }
 
 .snd__section img {
-  width: 17em;
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -311,7 +311,7 @@ nav {
   background-color: var(--dark-blue-color);
   margin-top: 2em;
   border-radius: 1.5em;
-  width: 20.4em;
+  width: 90%;
   height: 60em;
 }
 
@@ -354,7 +354,6 @@ nav {
   width: 16em;
   height: 26em;
   object-fit: cover;
-
 }
 
 .medical_service__img img {
@@ -367,26 +366,119 @@ nav {
   margin-top: 1.5em;
 }
 
-.medical_service__btn a{
+.medical_service__btn a {
   display: flex;
   color: var(--blue-color);
   justify-content: center;
   align-items: center;
-  gap: .5em;
+  gap: 0.5em;
   text-decoration: none;
   margin-top: 1em;
   font-weight: 600;
 }
 
-.medical_service__btn a i{
+.medical_service__btn a i {
   font-size: 20px;
+}
+
+.gallery__section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-content: center;
+  padding: 1.2em 1.2em;
+  gap: 1em;
+  margin-top: 15%;
+}
+.gallery__item1 {
+  grid-column: 1 / -1;
+  object-fit: cover;
+}
+.gallery__item2 {
+  grid-row: 2 / -1;
+  object-fit: cover;
+}
+.gallery__item_img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.5em;
+  margin: 0;
+  border-radius: 1em;
+}
+
+.contact_me {
+  padding: 1.2em 1.2em;
+}
+
+.contact_me__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact__social {
+  text-align: center;
+}
+
+.contact__social__icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact_me_map {
+  width: 90%;
+  object-fit: cover;
+  margin-top: 20%;
+}
+
+.map {
+  width: 100%;
+  vertical-align: middle;
+  border-radius: 2em;
+  box-shadow: 0 4px 6px rgba(0, 0, 0.4, 0.4);
+}
+
+.message_icon {
+  border: solid;
+}
+
+.write_to_me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+}
+
+.write_to_me h3 {
+  margin-bottom: 0;
+  color: var(--dark-blue-color);
+}
+
+.write_to_me p {
+  color: var(--dark-blue-color);
+}
+.contact__social__icons {
+  display: flex;
+  gap: 1.1em;
+  margin-top: 1em;
+}
+
+.contact__social__icons i {
+  font-size: 2em;
+  color: var(--gray-blue-color);
 }
 
 .arrow_to_top {
   position: fixed;
   z-index: 99999;
-  top: 42em;
-  left: 19.2em;
+  top: 90%;
+  left: 85%;
   background-color: #fff;
   width: 2.2em;
   height: 2.2em;
@@ -400,4 +492,45 @@ nav {
 .arrow_to_top i {
   font-size: 1.5em;
   color: var(--dark-blue-color);
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 7%;
+  gap: 2.5em;
+}
+
+.footer_logo p{
+  font-size: 1.7em;
+  margin-right: 15px;
+}
+
+.footer_logo i{
+  font-size: 2.1em;
+}
+
+.link_pages {
+  display: flex;
+  gap: 2em;
+}
+
+.link_pages a {
+  text-decoration: none;
+  color: var(--gray-blue-color);
+  font-weight: 500;
+  font-size: 1.1em;
+}
+
+.footer_icon{
+  display: flex;
+  gap: 1.5em;
+}
+
+.footer_icon i {
+  font-size: 2em;
+  color: var(--gray-blue-color);
 }
